--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap");
 * {
   font-family: "Barlow Semi Condensed", sans-serif;
+  box-sizing: border-box;
 }
 
 html {
@@ -14,6 +15,24 @@ body {
   height: 100%;
 }
 
+.nextRound {
+  display: block;
+  text-align: center;
+  color: white;
+}
+.nextRound button {
+  background: none;
+  border: 5px solid #606e85;
+  border-radius: 15px;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.nextRound button:hover {
+  filter: drop-shadow(0 0 0.55rem white);
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -21,6 +40,32 @@ body {
   justify-content: space-evenly;
   width: 100%;
   height: 95%;
+}
+.container .show {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+.container .show .computer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+.container .show .user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+.container .winner {
+  display: block;
+}
+.container .winner #winner {
+  color: white;
 }
 .container .score {
   display: flex;
@@ -67,6 +112,60 @@ body {
   font-weight: 800;
   color: white;
 }
+.container .paper-scissors-result {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container .paper-scissors-result #paper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #4865f4;
+  transition: all 0.5s ease;
+}
+.container .paper-scissors-result #scissor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #ec9e0e;
+  transition: all 0.5s ease;
+}
+.container .paper-scissors-result .rockComputer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #dc2e4e;
+  transition: all 0.5s ease;
+}
+.container .paper-scissors-result .rockUser {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #dc2e4e;
+  transition: all 0.5s ease;
+}
+.container .paper-scissors-result :hover {
+  filter: drop-shadow(0 0 0.55rem white);
+}
 .container .buttons {
   margin-top: 3rem;
   width: 90%;
@@ -105,6 +204,28 @@ body {
   border: 10px solid #ec9e0e;
   transition: all 0.5s ease;
 }
+.container .buttons .paper-scissors .rockComputer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #dc2e4e;
+  transition: all 0.5s ease;
+}
+.container .buttons .paper-scissors .rockUser {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 120px;
+  background: white;
+  border-radius: 100%;
+  border: 10px solid #dc2e4e;
+  transition: all 0.5s ease;
+}
 .container .buttons .paper-scissors :hover {
   filter: drop-shadow(0 0 0.55rem white);
 }
@@ -122,6 +243,10 @@ body {
 }
 .container .buttons .rock-container :hover {
   filter: drop-shadow(0 0 0.55rem white);
+}
+
+.hidden {
+  display: none !important;
 }
 
 @media only screen and (min-width: 600px) {
