--- a/index.scss
+++ b/index.scss
@@ -2,6 +2,7 @@
 
 * {
   font-family: "Barlow Semi Condensed", sans-serif;
+  box-sizing: border-box;
 }
 
 html {
@@ -14,6 +15,24 @@ body {
   width: 100%;
   height: 100%;
 }
+.nextRound {
+  display: block;
+  text-align: center;
+  color: white;
+  button {
+    background: none;
+    border: 5px solid hsl(217, 16%, 45%);
+    border-radius: 15px;
+    padding: 10px;
+    color: white;
+    cursor: pointer;
+    transition: all 0.5s ease;
+
+    &:hover {
+      filter: drop-shadow(0 0 0.55rem white);
+    }
+  }
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -21,6 +40,34 @@ body {
   justify-content: space-evenly;
   width: 100%;
   height: 95%;
+
+  .show {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    text-align: center;
+    width: 100%;
+    .computer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 50%;
+    }
+    .user {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 50%;
+    }
+  }
+
+  .winner {
+    display: block;
+    #winner {
+      color: white;
+    }
+  }
 
   .score {
     display: flex;
@@ -71,6 +118,61 @@ body {
     }
   }
 
+  .paper-scissors-result {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    #paper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 140px;
+      height: 120px;
+      background: white;
+      border-radius: 100%;
+      border: 10px solid hsl(230, 89%, 62%);
+      transition: all 0.5s ease;
+    }
+    #scissor {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 140px;
+      height: 120px;
+      background: white;
+      border-radius: 100%;
+      border: 10px solid hsl(39, 89%, 49%);
+      transition: all 0.5s ease;
+    }
+    .rockComputer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 140px;
+      height: 120px;
+      background: white;
+      border-radius: 100%;
+      border: 10px solid hsl(349, 71%, 52%);
+      transition: all 0.5s ease;
+    }
+    .rockUser {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 140px;
+      height: 120px;
+      background: white;
+      border-radius: 100%;
+      border: 10px solid hsl(349, 71%, 52%);
+      transition: all 0.5s ease;
+    }
+    & :hover {
+      filter: drop-shadow(0 0 0.55rem white);
+    }
+  }
+
   .buttons {
     margin-top: 3rem;
     width: 90%;
@@ -108,11 +210,32 @@ body {
         border: 10px solid hsl(39, 89%, 49%);
         transition: all 0.5s ease;
       }
+      .rockComputer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 140px;
+        height: 120px;
+        background: white;
+        border-radius: 100%;
+        border: 10px solid hsl(349, 71%, 52%);
+        transition: all 0.5s ease;
+      }
+      .rockUser {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 140px;
+        height: 120px;
+        background: white;
+        border-radius: 100%;
+        border: 10px solid hsl(349, 71%, 52%);
+        transition: all 0.5s ease;
+      }
       & :hover {
         filter: drop-shadow(0 0 0.55rem white);
       }
     }
-
     .rock-container {
       #rock {
         margin-top: 1rem;
@@ -131,6 +254,10 @@ body {
       }
     }
   }
+}
+
+.hidden {
+  display: none !important;
 }
 
 @media only screen and (min-width: 600px) {
